--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LCARS AppDaemon Stylus",
+  "name": "lcars-appdaemon-stylus",
   "version": "0.1.0",
   "description": "LCARS website framework",
   "repository": {
